--- a/Terms.html
+++ b/Terms.html
@@ -25,7 +25,7 @@
 
   <ul class="nav">
 
-<li><a class="aboutBtn" href="Aboutt.html">HOME</a></li>
+<li><a class="aboutBtn" href="index.html">HOME</a></li>
 <li><a class="comm" href="Commission.html">COMMISSION</a></li>
  <li><a class="term" href="Terms.html">TERMS</a></li>
    </ul>
