Update index.html for responsive layout
Added viewport meta tag for responsive design.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+    
     <meta charset="utf-8" />
     <title>My Activity T_T</title>
 
@@ -48,4 +51,5 @@ Discord - toast042_42057.</p4>
 <p class="p5">
 Facebook - <a href="https://www.facebook.com/rhailyandrei.gallano.96"> @Rhaily</a>
 </body>
+
 </html>
