--- a/Terms.html
+++ b/Terms.html
@@ -2,6 +2,8 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title></title>
      <link rel="stylesheet" href="Designcss.css">
@@ -61,4 +63,5 @@ By comissioning me, you agree to these terms.
 
 
 </body>
+
 </html>
