Update print statement from 'Hello' to 'Goodbye'

--- a/Commission.html
+++ b/Commission.html
@@ -2,6 +2,8 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+   <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title></title>
 
@@ -43,4 +45,5 @@
 
 
 </body>
+
 </html>
